--- a/package.json
+++ b/package.json
@@ -5,18 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.3.0",
-    "@reduxjs/toolkit": "^2.8.2",
     "date-fns": "^4.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
-    "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "recharts": "^3.1.2"
   },
@@ -32,8 +30,9 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
-    "tailwind": "^4.0.0",
     "tailwindcss": "^4.1.12",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2"
   }
 }
