--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@react-pdf/renderer": "^4.3.0",
     "@reduxjs/toolkit": "^2.9.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
+    "i": "^0.3.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
